test/tests/compiler/14_pointers/invalid_parse/malformed_function_declarator.plx
# This is a variation on chapter 9's function_returning_function.c,
# with a parenthesized declarator.
pub fn foo(none) (i32);

pub fn main(none) i32 {
    return 0
}
